api-gw/nginx/cmbc/f5-manage06/3.2.10/ingress-user.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user
  namespace: f5-manage06
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
spec:
  ingressClassName: nginx
  rules:
  - host: f5manage05.example.com
    http:
      paths:
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: user-svc
            port:
              number: 80
